--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,8 +22,8 @@
      <!-- <div style="display: flex; justify-content:left; width: 40%; ">
         <img src="static/wallpaper1.png">
      </div> -->
-    <div style="display: flex; justify-content:right; align-content: center; flex-wrap: nowrap; width: 100%; ">
-        <div style="display: flex; justify-content:right; height: 600px; ">
+    <!-- <div style="display: flex; justify-content:right; align-content: center; flex-wrap: nowrap; width: 100%; ">
+        <div  style="display: flex; justify-content:right; height: 600px; ">
             <img src="static/wallpaper1.png">
          </div>
         <div id="dashboardContent" class="tab-content" style="text-align: center; width: 58%;  background-color: transparent; font-family: 'Trebuchet MS', sans-serif; ">
@@ -39,7 +39,22 @@
         </div>
 
         
+    </div> -->
+    <div style="display: flex; justify-content:right; align-content: center; flex-wrap: nowrap; width: 100%;">
+        <div id="wallpaper" style="display: flex; justify-content:left; height: auto;">
+            <img style="width: 700px;height: 600px;"src="static/wallpaper1.png" alt="Wallpaper">
+        </div>
+        <div id="dashboardContent" class="tab-content" style="text-align: center; width: 58%;  background-color: transparent; font-family: 'Trebuchet MS', sans-serif;">
+            <h1>Thank you for considering donating blood!<h1>
+            <p>"A small needle can give someone a second chance at life."</p>
+            <p>Your decision could make a life-saving difference for someone in need.</p>
+            <p>Each donation has the power to help patients undergoing surgery, cancer treatment, or those in emergency situations. It’s a simple act of kindness that takes just a bit of your time but can mean the world to others.</p>
+            <h2>You're not just giving blood — you're giving hope, strength, and life.</h2>
+            <h3>Thank you for being a hero!</h3>
+            <img src="static/preloader.gif" alt="">
+        </div>
     </div>
+    
     <div style="display: flex; justify-content: center; align-content: center; flex-wrap: nowrap; width: 80%;">
         <div id="updateAccountContent" class="tab-content" style="width: 70%;">
             <h3 style="text-align:center">Update Account</h3>
