--- a/templates/index.html
+++ b/templates/index.html
@@ -17,14 +17,14 @@
 
                     <!-- <a href="#"><img src="static/logo.png" class="logo" alt="Logo"></a> -->
                     <nav>
-                        <ul class="navi" style="justify-content: right; padding: 20px; ; ">
-                            <a href="#"><img src="static/logo.png" width="40" height="40" class="logo" alt="Logo"></a>
-                            <li style="margin-right:25px ;"><a href="index.html" style="font-size: 18px;"><i class="fas fa-home"></i> HOME</a></li>
-                            <li style="margin-right:25px ;"><a href="search.html" style="font-size: 18px;"><i class="fas fa-search"></i> SEARCH</a>
+                        <ul class="navi" style="justify-content: right; padding: 10px;">
+                            <a href="#" style="margin-right: 570px; display: flex;"><img src="static/logo.png" height="60px" class="logo" alt="Logo"></a>
+                            <li style="margin-right:25px; margin-top: 25px;"><a href="index.html" style="font-size: 18px;"><i class="fas fa-home"></i> HOME</a></li>
+                            <li style="margin-right:25px ;margin-top: 25px;"><a href="search.html" style="font-size: 18px;"><i class="fas fa-search"></i> SEARCH</a>
                             </li>
-                            <li style="margin-right:25px ;"><a href="login.html" style="font-size: 18px;"><i class="fas fa-key"></i> LOGIN</a>
+                            <li style="margin-right:25px ; margin-top: 25px;"><a href="login.html" style="font-size: 18px;"><i class="fas fa-key"></i> LOGIN</a>
                             </li>
-                            <li><a href="donor.html" style="font-size: 18px;"><i class="fas fa-user"></i> DONORS</a></li>
+                            <li style="margin-top: 25px;"><a href="donor.html" style="font-size: 18px;"><i class="fas fa-user"></i> DONORS</a></li>
                             <!-- <li><a href="blood_bank_login.html">BLOOD BANK LOGIN</a></li> -->
                         </ul>
                     </nav>
