--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -55,7 +55,7 @@
         </div>
     </div>
     
-    <div style="display: flex; justify-content: center; align-content: center; flex-wrap: nowrap; width: 80%;">
+    <div style=" display: flex; justify-content: center; align-content: center; flex-wrap: nowrap; width: 60%; margin-left: 310px;">
         <div id="updateAccountContent" class="tab-content" style="width: 70%;">
             <h3 style="text-align:center">Update Account</h3>
             <form id="updateAccountForm">
