--- a/templates/static/dashboard.css
+++ b/templates/static/dashboard.css
@@ -1,13 +1,9 @@
 body {
-    /* font-family:"Droid Sana", sans-serif; */
+    font-family:"Droid Sana", sans-serif;
     background:#f0efef;
     background-attachment: fixed; 
     margin: 0;
     padding: 0.5px;
-    /* background-image: url('background1.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100% 100%;  */
 } 
 .header {
     background-color: #7f0210;
@@ -17,7 +13,7 @@ body {
 }
 
 .container {
-    /* max-width: 1200px; */
+    max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -57,15 +53,15 @@ form {
 input, select {
     padding: 8px;
     border: 1px solid #ccc;
-    /* border-radius: 4px; */
-    /* box-sizing: border-box; */
+    border-radius: 4px; 
+    box-sizing: border-box;
 }
 button {
-    /* padding: 10px 15px; */
+    padding: 10px 15px;
     background-color: #7f0210;
     color: white;
     border: none;
-    /* border-radius: 4px; */
+    border-radius: 4px;
     cursor: pointer;
 }
 button:hover {
