--- a/templates/donor.html
+++ b/templates/donor.html
@@ -10,10 +10,11 @@
             background-color: #f4f4f4;
             margin: 0;
             padding: 20px;
-            /* background-image: url('static/background.png');
+            background-image: url('static/background.png');
             background-size: cover; 
             background-position: center; 
-            background-repeat: no-repeat; */
+            background-repeat: no-repeat;
+            
         }
         h2 {
             text-align: center;
