--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,7 +15,7 @@
             <header class="header">
                 <div class="container">
 
-                    <!-- <a href="#"><img src="static/logo.png" class="logo" alt="Logo"></a> -->
+                    
                     <nav>
                         <ul class="navi" style="justify-content: right; padding: 10px;">
                             <a href="#" style="margin-right: 570px; display: flex;"><img src="static/logo.png" height="60px" class="logo" alt="Logo"></a>
@@ -25,7 +25,7 @@
                             <li style="margin-right:25px ; margin-top: 25px;"><a href="login.html" style="font-size: 18px;"><i class="fas fa-key"></i> LOGIN</a>
                             </li>
                             <li style="margin-top: 25px;"><a href="donor.html" style="font-size: 18px;"><i class="fas fa-user"></i> DONORS</a></li>
-                            <!-- <li><a href="blood_bank_login.html">BLOOD BANK LOGIN</a></li> -->
+                           
                         </ul>
                     </nav>
 
@@ -172,6 +172,129 @@
     <div>
         <p>
         </p>
+    </div>
+</footer>
+
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="static/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+
+<body>
+    <div id="root">
+        <div class="App">
+            <header class="header">
+                <div class="container">
+                    <nav>
+                        <ul class="navi d-flex justify-content-between align-items-center p-3">
+                            <a href="#" class="logo" style="max-width: 100px;"><img src="static/logo.png" height="60px" alt="Logo"></a>
+                            <li><a href="index.html" style="font-size: 18px;"><i class="fas fa-home"></i> HOME</a></li>
+                            <li><a href="search.html" style="font-size: 18px;"><i class="fas fa-search"></i> SEARCH</a></li>
+                            <li><a href="login.html" style="font-size: 18px;"><i class="fas fa-key"></i> LOGIN</a></li>
+                            <li><a href="donor.html" style="font-size: 18px;"><i class="fas fa-user"></i> DONORS</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+
+            <section class="heroComponent">
+                <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-item">
+                        <img src="static/front_image.png" class="d-block w-100" alt="Second Image">
+                        <div class="carousel-caption d-md-block mt-3" style="left: 7%; bottom: 0px;">
+                            <button class="btn imgBtn d-none d-lg-block" onclick="window.location.href='register.html'">BECOME A DONOR</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <div class="donorCount">
+                <div class="d-flex flex-wrap">
+                    <div class="bg-left w-100 text-center py-3 px-5">
+                        <p id="registeredDonorsAll" class="count mb-0">-</p>
+                        <p class="totalCount mb-0">Donor Registered</p>
+                    </div>
+                    <div class="bg-right w-100 text-center py-3 px-5">
+                        <p id="donorsDonatedAll" class="count mb-0">-</p>
+                        <p class="totalCount mb-0">Blood Units Collected</p>
+                    </div>
+                </div>
+            </div>
+
+            <section class="learn-donation">
+                <div class="container">
+                    <h3 class="section-heading text-center mt-5">Learn About Donation</h3>
+                    <div class="text-center">
+                        <p class="label mb-1">Select your Blood Type</p>
+                        <div class="d-flex flex-wrap justify-content-center">
+                            <button class="btn selectBtn active">A+</button>
+                            <button class="btn selectBtn">O+</button>
+                            <button class="btn selectBtn">B+</button>
+                            <button class="btn selectBtn">AB+</button>
+                            <button class="btn selectBtn">A-</button>
+                            <button class="btn selectBtn">O-</button>
+                            <button class="btn selectBtn">B-</button>
+                            <button class="btn selectBtn">AB-</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="donation-working mt-5">
+                <div class="donation-bg-img">
+                    <div class="container">
+                        <h3 class="section-heading text-center py-5">How <span class="donation">Donation</span> Works?</h3>
+                        <div class="d-flex justify-content-between flex-wrap">
+                            <div class="card-container pb-4">
+                                <div class="card h-100 align-items-center pt-4">
+                                    <img src="static/reg-img.png" class="img-fluid" alt="..." width="78px" height="78px">
+                                    <div class="card-body text-center pt-4 pb-3">
+                                        <p class="card-text mb-0">Registration Process</p>
+                                        <p class="card-text-light mb-0">Sign up and schedule your first with ease</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-container pb-4">
+                                <div class="card h-100 align-items-center pt-4">
+                                    <img src="static/heart-img.png" class="img-fluid" alt="..." width="78px" height="78px">
+                                    <div class="card-body text-center pt-4 pb-3">
+                                        <p class="card-text mb-0">Health Screening</p>
+                                        <p class="card-text-light mb-0">A simple check-up to ensure you’re ready to donate</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-container pb-4">
+                                <div class="card h-100 align-items-center pt-4">
+                                    <img src="static/pay-img.png" class="img-fluid" alt="..." width="78px" height="78px">
+                                    <div class="card-body text-center pt-4 pb-3">
+                                        <p class="card-text mb-0">Donation Day</p>
+                                        <p class="card-text-light mb-0">Relax as our professional staff guide you through</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+        </div>
+    </div>
+
+    <script src="js/script.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+</body>
+
+<footer>
+    <div class="text-center py-3">
     </div>
 </footer>
 
