--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -175,8 +175,9 @@
     </div>
 </footer>
 
-</html> -->
+</html>
 
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
 
@@ -298,4 +299,4 @@
     </div>
 </footer>
 
-</html>
+</html> -->
