--- a/templates/register.html
+++ b/templates/register.html
@@ -170,7 +170,7 @@
             <button type="submit">Register</button>
         </form>
         <div class="redirect">
-            <p>Already have an account? <a href="http://localhost:3000/login.html">Login here</a></p>
+            <p>Already have an account? <a href="login.html">Login here</a></p>
         </div>
     </div>
     <script src="js/register.js"></script>
