--- a/templates/login.html
+++ b/templates/login.html
@@ -68,7 +68,7 @@
             <button type="submit">Login</button>
         </form>
         <div class="redirect">
-            <p>Don't have an account? <a href="http://localhost:3000/register.html">Register here</a></p>
+            <p>Don't have an account? <a href="register.html">Register here</a></p>
         </div>
     </div>
 
